# opal

./: DELETE.OCS  DELETE.in  LICENSE  Makefile  Makefile.in  OCSADMIN  ProjectDefs  README  README.md  SysDefs  configure.in  dist_tarball.sh  ignore1  ignore2  ocs-version  opal.xbm  opalconfig  opalconfig.makeTargets.in  opalwizard
admin/release/: Makefile  ProjectDefs.build  ProjectDefs.release  release
admin/selftest/: Makefile  ProjectDefs.selftest  README  SysDefs.src  SysDefs.src.lib  SysDefs.src.lib.Tools  SysDefs.src.oc  initSelftest  selftest
devel/: baselibbootstrap.sh  bibopalica_add_structure  man2pdf  modify_baselib  ocsadm  setup_src_tree
devel/opalc/: COPYING  S.impl  S.sign  SysDefs  TestOpalCompiler.impl  TestOpalCompiler.sign  cs  opalc
doc/: SysDefs  VERSION
doc/bibopalica/: SysDefs  bibopalica.html  bibopalica.texi  bibopalica_body.html  bibopalica_foot.html  bibopalica_indices.html  bibopalica_title.html  bibopalica_toc.html
doc/bibopalicaman/: README  SysDefs  adapt
doc/cygwin/: SysDefs  cygwin.html
doc/dosfopman/: DosfopManual.texi  SysDefs
doc/hcguide/: SysDefs  hcguide.texi
doc/index/: LICENSE  LICENSE.html  SysDefs  index.html  index.html.in  index_headl.html  index_overview.html  index_overview.html.in  installation-notes.html
doc/install/: SysDefs  install.texi
doc/minitutorial/: SysDefs  minitutorial.html  mintut_doc.html  mintut_genlb.html  mintut_index.html  mintut_oasys.html  mintut_oasys.html.in  mintut_opener.html  mintut_prep.html  mintut_prep.html.in  mintut_prop.html  mintut_start.html  mintut_uselb.html  mintut_uselb.html.in  ocs.html
doc/oasysman/: OasysManual.texi  SysDefs
doc/opal-mode/: SysDefs  opal-mode.texi
doc/opal2x/: README  SysDefs  basicprog.sty  dokopal2x.tex  opal2x.html  opal2x.sty  opal2x.tex  progfont.sty  programsymbols.sty  scanner.sty  scanner.tex  slang.sty  symbols.sty  symbols.tex  tables.tex  trouble.tex  tubprogram.sty
doc/opalreport/: SysDefs  opalreport.tex
doc/reflectionman/: Survey.texi  SysDefs  adapt
doc/tutorial/: SysDefs  a4.sty  biblio.tex  errors.tex  example.tex  expression.tex  inout.tex  intro.tex  large.tex  library.tex  macros.tex  names.tex  small.tex  titlepage.tex  tutorial.tex  types.tex
doc/userguide/: SysDefs  comp.tex  drop.sty  macros.tex  userguide.tex
examples/: README  SysDefs
examples/Graphics/: README  SysDefs
examples/HelloWorld/: HelloWorld.impl  HelloWorld.sign  SysDefs  SysDefs.HelloWorld-hello
examples/Integrator/: Evaluator.impl  Evaluator.sign  Expr.impl  Expr.sign  Integral.impl  Integral.sign  NIAC.impl  NIAC.sign  Parser.impl  Parser.sign  Scanner.impl  Scanner.sign  SysDefs  SysDefs.NIAC-integral  Token.impl  Token.sign  config.oasys
examples/InterFilter/: ProjectDefs  README
examples/Java/: ProjectDefs.Java  README  SysDefs  SysDefs.Java  example.jb
examples/MyFirstProgram/: MyFirstProgram.impl  MyFirstProgram.sign  SysDefs
examples/Persistence/: README  SysDefs
examples/ProofChecker/: Colour.impl  Colour.sign  ColourOrd.impl  ColourOrd.sign  ProjectDefs  ProjectDefs.proofchecker  README  SECURE.impl  SECURE.sign  SecureCom.impl  SecureCom.sign  Security.impl  Security.sign  SysDefs  config.oasys  pABORT.impl  pABORT.sign  pBOOL.impl  pBOOL.sign  pComCompose.impl  pComCompose.sign  pFile.impl  pFile.sign  pReal.impl  pReal.sign  pSet.impl  pSet.sign  sNat.impl  sNat.sign  sNatAux.impl  sNatAux.sign  sNatConv.impl  sNatConv.sign  sSeq.impl  sSeq.sign
examples/Queens/: Queens.impl  Queens.sign  SysDefs
examples/Rabbits/: Rabbits.impl  Rabbits.sign  SysDefs  SysDefs.Rabbits-main
examples/Rational/: README  Rational.impl  Rational.sign  SysDefs
examples/Reflections/: ProjectDefs  README  Survey.texi  SysDefs
release/: DELETE.ocsdefs  DELETE.tex  dist_tarball.sh  exclude.OCS  exclude.autogen  exclude.dosfop  exclude.executables  exclude.texi
src/: ProjectDefs.bootstrap  SysDefs
src/browser/: BrCommands.impl  BrCommands.sign  Browser.impl  Browser.sign  Commands.impl  Commands.sign  IndependentCom.impl  IndependentCom.sign  Makefile.boot  Switch.impl  Switch.sign  SysDefs
src/dosfop/: ProjectDefs.dosfop  SysDefs
src/emacs/: README  README.emacs  SysDefs  oasys-mode.el  opal-browser.el  opal-certify.el  opal-compile.el  opal-defs-mode.el  opal-diag-messages.el  opal-diag-mode.el  opal-dosfop.el  opal-filehandling.el  opal-font-lock.el  opal-import.el  opal-indent.el  opal-info.el  opal-mode.el  opal-mode.texi  opal-oasys.el  opal-outline.el  opal-switch.el  opal-toolbar.el  opal-trace-mode.el  opal-x-compile.el  opal-x-diag-mode.el
src/kde/: README  SysDefs  x-interopal.kdelnk  x-opal-impl.kdelnk  x-opal-projectdefs.kdelnk  x-opal-sign.kdelnk  x-opal-sysdefs.kdelnk  x-opal-trace.kdelnk
src/lib/: Doku.config  Doku.tex  DokuMaster.tex  Makefile.boot  ProjectDefs  SysDefs  VERSION  xtex.sty
src/oasys/: ProjectDefs.install-shared  SysDefs
src/oc/: ProjectDefs  ProjectDefs.install  SysDefs  VERSION
src/om/: SysDefs  SysDefs.install  VERSION
src/ordinatrice/: AnalyzeIO.impl  AnalyzeIO.sign  ShortCutsIO.impl  ShortCutsIO.sign  SynthesizeIO.impl  SynthesizeIO.sign  SysDefs  ordFmtPrint.impl  ordFmtPrint.sign  ordLess.impl  ordLess.sign  ordMain.impl  ordMain.sign  ordUpdate.impl  ordUpdate.sign  ordinatrice.impl  ordinatrice.sign
src/proofchecker/: README
src/tivi2/: BinAEntryNE.impl  BinAEntryNE.sign  BindAEntryNE.impl  BindAEntryNE.sign  BindMap.impl  BindMap.sign  BindSeq.impl  BindSeq.sign  ConnectControl.impl  ConnectControl.sign  ControlAOW.impl  ControlAOW.sign  DataWindow.impl  DataWindow.sign  ExprEqnGuardEntry.impl  ExprEqnGuardEntry.sign  FctEntry.impl  FctEntry.sign  FormulaEntry.impl  FormulaEntry.sign  IOSmallEntries.impl  IOSmallEntries.sign  ImplEntry.impl  ImplEntry.sign  InterOpalEntry.impl  InterOpalEntry.sign  InterOpalWindow.impl  InterOpalWindow.sign  MONITOR.impl  MONITOR.sign  Multiplexer.impl  Multiplexer.sign  NameEntry.impl  NameEntry.sign  ObjectEntry.impl  ObjectEntry.sign  PatternEntry.impl  PatternEntry.sign  PragmaEntry.impl  PragmaEntry.sign  (+19 more)
src/vim/: README  SysDefs  (+1 more)
(+3541 files in other folders)
